# web-scraper

./: README.md  pyproject.toml
test/: test_web_scraper.py
web_scraper/: web_scraper.py
